@@ -1,5 +1,8 @@
 2006-01-09  Michael Meeks  <michael.meeks@novell.com>
 
+	* source/ui/solver.cxx: remove, now
+	source/service/service.cxx.
+
 	* source/numeric/matrix.cxx: re-work boost / stl bits
 	a little.
 
